# whisper-align

./: README.md  pyproject.toml
configs/: slurm_a5.yaml
src/whisper_align/: __init__.py  __main__.py  cli.py  config.py  core.py  postprocess.py  runner.py  slurm.py
src/whisper_align/configs/: __init__.py
